--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,17 @@ quarkus.datasource.password=${POSTGRES_PASSWORD:negroni123}
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=no-file
+
+# JWT locale (con chiave segreta HMAC)
+mp.jwt.verify.issuer=http://localhost:8080
+
+quarkus.smallrye-jwt.sign.key-location=negroni.jwt.secret
+quarkus.smallrye-jwt.sign.key-format=plain
+negroni.jwt.secret=super-secret-key-for-dev-123456789
+
+
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:5173
+quarkus.http.cors.headers=Authorization,Content-Type
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
